# portfolio-management-simulation-platform

./: CMakeLists.txt  LICENSE  README.md
data/: covariance.csv  covariance.py  covariance.txt  covariance_large.csv  covariance_large.txt  returns.csv  returns.txt  returns_small.csv  returns_small.txt
docs/: README.txt  architecture_and_design.md  requirements.md  testplan.md
include/: DataLoader.h  GroverSearch.h  MarkowitzOptimizer.h  QAOA.h
src/: CMakeLists.txt  main.cpp
src/classical_algorithms/: MarkowitzOptimizer.cpp  Optimization.cpp  Optimization.hpp
src/quantum_algorithms/: GroverSearch.cpp  GroverSearch.hpp  QAOA.cpp  QAOA.hpp  QuantumAnnealing.cpp  QuantumAnnealing.hpp  VQE.cpp  VQE.hpp  VQECostFunction.cpp  VQECostFunction.hpp
src/utils/: DataLoader.cpp
tests/: test_classical_optimization.cpp  test_grover_search.cpp  test_qaoa.cpp  test_quantum_annealing.cpp  test_vqe.cpp  test_vqe_cost_function.cpp
